--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}body{background:url("/assets/images/fundo.webp") no-repeat;background-size:cover;margin:0;padding:0;font-family:"Open Sans",sans-serif;padding:0 10px}
+*{box-sizing:border-box}body{background:url("/assets/images/mobile.webp") repeat;background-size:cover;margin:0;padding:0;font-family:"Open Sans",sans-serif;padding:0 10px}@media(min-width: 768px){body{background:url("/assets/images/fundo.webp") no-repeat;background-size:cover}}
