--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -3,10 +3,18 @@
 }
 
 body{
-    background: url('/assets/images/fundo.webp') no-repeat;
+    background: url('/assets/images/mobile.webp') repeat;
     background-size: cover;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     padding: 0 10px;
 }
+
+@media(min-width : 768px){
+    body{
+        background: url('/assets/images/fundo.webp') no-repeat;
+        background-size: cover;
+    }
+}
+
