--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -78,7 +78,14 @@ div.card{
     margin-left: 25px;
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
     border-radius: 15px;
-    
+    & > {
+        p, h2{
+            margin: 0;
+            padding: 0;
+            padding-top: 10px;
+            color: #fff;
+        }
+    }
 }
 div.card:hover{
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
@@ -87,13 +94,9 @@ div.card:hover{
     height: 280px;
     font-size: 1.2em;
     font-weight: bolder;
+    cursor: pointer;
 }
-p, h2{
-    margin: 0;
-    padding: 0;
-    padding-top: 10px;
-    color: #fff;
-}
+
 h1{
     color: #fff;
 }
@@ -112,6 +115,68 @@ p.clima{
     font-size: 0.5em;
     font-weight: 400;
     font-style: italic;
+}
+
+div.infos{
+    display: flex;
+    flex-direction: column;
+    z-index: 100;
+    width: 60%;
+    height: 70vh;
+    background: #fff;
+    position: fixed;
+    color: #000;
+    border-radius: 10px;
+    transition: .6s;
+    & > h2{
+        color: red;
+    }
+}
+
+div.top{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 30px;
+    padding: 10px;
+    font-weight: 100;
+}
+
+div.fechar{
+    width: 20px;
+    height: 20px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+div.data{
+    width: 50%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    & > h2{
+        margin: 0;
+        padding: 0;
+        padding-top: 10px;
+        color: #242424;
+        font-size: 0.5em;
+        font-weight: 400;
+        font-style: italic;
+    }
+}
+
+div.conteudo{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 @media(min-width: 1200px){
